--- a/cursoADVweb/src/app/area-professor/alunos/alunos.component.html
+++ b/cursoADVweb/src/app/area-professor/alunos/alunos.component.html
@@ -8,4 +8,11 @@
     </div>
   </div>
   ALUNOS
+  <app-table
+    [lista]="listaAlunos"
+    [header]="header"
+    [options]="options"
+    (selection)="pegarSelecionados()"
+    [actions]="actions">
+  </app-table>
 </div>
