--- a/cursoADVweb/src/app/components/sidebarAreaProfessor/sidebar-area-professor/sidebar-area-professor.component.html
+++ b/cursoADVweb/src/app/components/sidebarAreaProfessor/sidebar-area-professor/sidebar-area-professor.component.html
@@ -22,6 +22,14 @@
           Cursos
         </div>
       </button>
+      <button (click)="direciona('areaProfessor/videos')" class="btn btn-outline-light d-flex mt-2" style="border: solid white 1px" mat-menu-item>
+        <span class="material-icons pe-2">
+          play_arrow
+          </span>
+        <div class="col-1">
+          Video
+        </div>
+      </button>
       <button (click)="direciona('areaProfessor/tarefas')" class="btn btn-outline-light d-flex mt-2" style="border: solid white 1px" mat-menu-item>
         <span class="material-icons pe-2">
           task
