--- a/cursoADVweb/src/app/areaAluno/aula/aula.component.html
+++ b/cursoADVweb/src/app/areaAluno/aula/aula.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div *ngIf="!carregando" class="{{tipoCurso != 'GRUPOESTUDOS'? 'col-8':'col-12'}}">
-    <video *ngIf="tipoCurso != 'GRUPOESTUDOS'" width="100%" height="515" controls controlsList="nodownload" src="https://centroproinf.com.br/assets/videos/{{ModuloSelecionado}}.mp4">
+    <video *ngIf="tipoCurso != 'GRUPOESTUDOS'" width="100%" height="515" controls controlsList="nodownload" src="https://centroproinf.com.br/video/{{ModuloSelecionado}}.mp4">
       <source  type="video/mp4" >
     </video>
     <h2 *ngIf="tipoCurso != 'GRUPOESTUDOS'" ><small><b>{{curso.titulo}}</b></small> | <small><b>{{nomeModulo}}</b></small></h2>
@@ -57,15 +57,16 @@
         </mat-tree-node>
       </mat-tree>
 
-      <!-- <div *ngFor="let arquivo of arquivoAula">
+      <div *ngIf="this.arquivoAula.length > 0" class="d-flex flex-wrap w-100 mt-4">
+        <span *ngFor="let arquivo of this.arquivoAula">
+          <div title="{{arquivo.nome}}" class="flex-wrap pointer d-flex justify-content-center mb-4" (click)="download(arquivo)">
+            <img src="assets/imgs/pdf.png" class="" height="100">
+            <!-- <span > {{arquivo.nome}} </span> -->
+            <small class="w-100 d-flex justify-content-center">{{arquivo.nome.length > 15? arquivo.nome.substring(0, 15) + "...": arquivo.nome}}</small>
 
-        <button (click)="download(arquivo)" type="button" class="btn {{isMobile? 'w-100 justify-content-between': ''}} rounded-pill  btn-danger d-flex mt-2" >
-          <span>{{isMobile? arquivo.nome.length > 24? arquivo.nome.substring(0, 24) + "...": arquivo.nome : arquivo?.nome}}</span>
-          <span class="material-icons ms-2">
-            download
-          </span>
-        </button>
-      </div> -->
+          </div>
+        </span>
+      </div>
 
       <div *ngIf="arquivoAula.length == 0" class="mt-5">
         <h1 class="w-100">
@@ -76,7 +77,7 @@
       </div>
     </div>
 
-    <div *ngIf="tipoCurso != 'GRUPOESTUDOS'" class="{{isMobile? 'col-12 p-4':'col-12'}}">
+    <!-- <div *ngIf="tipoCurso != 'GRUPOESTUDOS'" class="{{isMobile? 'col-12 p-4':'col-12'}}">
       <div style="border: #c3c1c1 solid 1px; border-radius: 10px;" class="col-12 d-flex flex-wrap justify-content-center pe-3 pt-3 pb-3">
         <div class="{{isMobile? 'col-12':'col-2'}} d-flex justify-content-center">
           <div class="circle" style="height: 80px !important; width: 80px !important;">
@@ -185,7 +186,7 @@
           </mat-paginator>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <div  class="col-4" *ngIf="curso.tipoCurso != 'GRUPOESTUDOS' && !carregando">
     <div class="w-100 m-2 modulos mt-5 pt-4" style="height: 500px;" >
