--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -54,7 +54,7 @@ html {
   --mdc-dialog-subhead-color: rgb(0 0 0 / 87%);
   --mdc-dialog-supporting-text-color: rgb(0 0 0 / 60%);
   --mdc-text-button-label-text-color: #000;
-
+  --mat-form-field-filled-with-label-container-padding-top: 16px;
 }
 
 .second-modal-backdrop {
